--- a/dev-guide/README
+++ b/dev-guide/README
@@ -1,2 +1,2 @@
-This document is for developers to utilize the ArcGIS WebApp Builder development package to develop widgets and themes. 
+This document is for developers to utilize the WebApp Builder for ArcGIS development package to develop widgets and themes. 
 
