--- a/dev-guide/README
+++ b/dev-guide/README
@@ -1,2 +1,6 @@
-This document is for developers to utilize the Web AppBuilder for ArcGIS development package to develop widgets and themes. 
+Visit the [developers site of Web AppBuilder for ArcGIS](https://developersdev.arcgis.com/web-appbuilder/) to get more details about:
+* Downloading the latest release for Web AppBuilder
+* Quick guide for using Web AppBuilder
+* Widget and theme developers guide
+* The app framework API reference and app / widget configuration JSON reference
 
